src/styles/references.css
.reference {
    padding: 10px;
    width: inherit;
    border: solid 1px
}

.new-note {
    text-align: center;
    background-color: #D5D5D5;
}

div.note-dropdown.ui.scrolling.dropdown {
    /*margin-top: 10px;*/
    background: #ffffff;
    border-top: solid 1px #CECECE;
    border-right: solid 1px #CECECE;
    border-radius: 4px 4px 0 0;
}

div.ui.bottom.attached.segment.active.tab {
    padding: 0;
}

.editor-toolbar.menu {
    margin: 0
}

.editor-container {
    padding: 20px;
}

.ui.dropdown .menu {
    right: 0;
    left: auto;
}

